Descrição das alterações feitas

--- a/metodogdf.com.br/__trashed-2/indexdef5.html
+++ b/metodogdf.com.br/__trashed-2/indexdef5.html
@@ -1037,7 +1037,7 @@ src="https://www.facebook.com/tr?id=253012153939385&amp;ev=PageView&amp;noscript
 				<div class="elementor-element elementor-element-4ec042ec elementor-align-center elementor-widget elementor-widget-button" data-id="4ec042ec" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://pay.hotmart.com/G72652514I?checkoutMode=10" class="elementor-button-link elementor-button elementor-size-sm elementor-animation-pulse" role="button">
+			<a href="https://pagamentosegury.online/checkout/cm5y6q3wu22g0xmenor0ucdp6?offer=JTLISCP" class="elementor-button-link elementor-button elementor-size-sm elementor-animation-pulse" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">EU QUERO ME INSCREVER COM TODOS OS BÔNUS</span>
 		</span>
